# GramLynx

./: .dockerignore  .env.smart_baseline_staging.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yml  config.smart_baseline_shadow_staging.yml  config.smart_baseline_staging.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: benchmark-report.yml  docker-smart-baseline-smoke.yml  smart-baseline-promotion-check.yml  tests.yml
app/: main.py
app/api/: routes.py  (+1 more)
docs/: runbook_smart_baseline.md  shadow_first_rollout_policy.md  slice_a_coverage_atlas.md  smart_baseline_local_review_walkthrough.md
scripts/: smoke_smart_baseline.py
tests/: cases.yaml  conftest.py  eval_candidate_harness.py  eval_ruspellgold_harness.py  fixtures_cases.py  generate_manual_review_pack.py  generate_product_delta_report.py  generate_readiness_summary.py  generate_review_adjudication_record.py  generate_rollout_decision_record.py  generate_usefulness_showcase.py  offline_context_rerank_replay.py  offline_kenlm_rerank_experiment.py  prepare_ruspellgold_full_public.py  prepare_v2_kenlm_model.py  report_candidate_baseline.py  report_ruspellgold_tuning.py  report_v2_slice_scorer_comparison.py  review_pilot_corpus.py  test_api.py  test_api_cases.py  test_audit_log.py  test_candidate_eval_harness.py  test_config_integrity_profiles.py  test_custom_stage_plugin.py  test_deterministic_spelling.py  test_docker_compose_profile.py  test_fuzz_protected_zones.py  test_fuzz_rulepack_safety.py  test_generate_manual_review_pack.py  test_generate_product_delta_report.py  test_generate_readiness_summary.py  test_generate_review_adjudication_record.py  test_generate_rollout_decision_record.py  test_generate_usefulness_showcase.py  test_guardrails_security.py  test_local_rollout_review_flow.py  test_max_body_size.py  test_metrics.py  test_narrow_safest_dictionary_package.py  (+36 more)
(+107 files in other folders)
