[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gramlynx-text-clean"
version = "0.1.0"
description = "Text -> Clean Text microservice"
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "ruff>=0.4.0",
    "hypothesis>=6.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]
metrics = [
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
extend-exclude = [
    "tests/fixtures_cases.py",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
    "F401",
    "I001",
]

[tool.setuptools.packages.find]
include = [
    "app*",
]
